@@ -109,7 +109,7 @@ public class UndoableAddOrRemoveGroup extends AbstractUndoableJabRefEdit {
 
     private void doOperation(boolean undo) {
         GroupTreeNode cursor = m_groupsRootHandle.getNode();
-        final int childIndex = m_pathToNode.get(m_pathToNode.size() - 1);
+        final int childIndex = m_pathToNode.getLast();
         // traverse path up to but last element
         for (int i = 0; i < (m_pathToNode.size() - 1); ++i) {
             cursor = cursor.getChildAt(m_pathToNode.get(i)).get();
